--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,23 @@
 version: "3.8"
 
 services: 
-  pgbd:
+  pgdb:
     container_name: pgdb_books
     image:  postgres
     restart: always
     ports: 
-      - 5432: 5432
+      - 5432:5432
     environment: 
-      - POSTGRES_DB= postgres
-      - POSTGRES_USER = postgres
-      - POSTGRES_PASSWORD = postgres
-      
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+  pgadmin:
+    container_name: pgadmin4
+    image: dpage/pgadmin4
+    restart: always
+
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@mail.com
+      PGADMIN_DEFAULT_PASSWORD: admin123456
+    ports: 
+      - "5050:80"
